bugs fixeds
