# src/app/controllers/OfferController.js
@@ -7,14 +7,14 @@ import Coin from '../models/Coin'
 import CategoryAgent from '../models/CategoryAgent'
 import Hotel from '../models/Hotel'
 import Room from '../models/Room'
-import api from '../../api/CurrencyApi'
+import Exchange from '../models/Exchange'
+import ExchangeProfit from '../models/ExchangeProfit'
 
 import { parseISO, isBefore, isEqual, differenceInDays } from 'date-fns'
 
 class OfferController {
   async index(req, res) {
     // #swagger.tags = ['Offer']
-    console.log(await api.updateAllCoins())
     const offers = await Offer.findAll({
       attributes: [
         'id',
@@ -47,7 +47,7 @@ class OfferController {
     return res.json(offers)
   }
 
-  async store(req, res) {
+  async store(req, res, next) {
     // #swagger.tags = ['Offer']
 
     const { customer_id, agent_id, service_id, checkin, checkout } = req.body
@@ -79,7 +79,7 @@ class OfferController {
       include: {
         model: Coin,
         as: 'coin',
-        attributes: ['id', 'profit'],
+        attributes: ['id', 'profit', 'value'],
       },
     })
 
@@ -120,7 +120,7 @@ class OfferController {
         {
           model: Coin,
           as: 'coin',
-          attributes: ['id', 'name'],
+          attributes: ['id', 'name', 'value'],
         },
       ],
     })
@@ -129,11 +129,18 @@ class OfferController {
       res.status(400).json({ error: "Service don't exist'" })
     }
 
-    // pegar o valor do serviço
-    let priceService = parseFloat(serviceExists.price)
+    // get value initial of service offer
+    let priceService = 0
+    priceService = serviceExists.price
 
+    /**
+     * enough if the coins(customer and service) are the same
+     */
     if (customerExists.coin.id !== serviceExists.coin.id) {
-      const serviceCoinEqual = await Service.Service.findOne({
+      /**
+       * if the currencies are the same, look for an equivalent service
+       */
+      const serviceCoinEqual = await Service.findOne({
         where: {
           hotel_id: serviceExists.hotel.id,
           room_id: serviceExists.room.id,
@@ -153,55 +160,150 @@ class OfferController {
           {
             model: Coin,
             as: 'coin',
-            attributes: ['id', 'name'],
+            attributes: ['id', 'name', 'value'],
           },
         ],
       })
-      //mudança no serviço
+
+      /**
+       * if there is an equivalent service in the customer's currency,
+       * this will be the new service
+       */
       if (serviceCoinEqual) {
         serviceExists = serviceCoinEqual
-        priceService = parseFloat(serviceExists.price)
+        if (serviceExists.price) {
+          priceService = parseFloat(serviceExists.price)
+        }
       } else {
-        //update valores das moedas
+        //get exchange profit
+        const profitExchange = await ExchangeProfit.findOne({
+          where: { active: true },
+        })
+        let profit = 0
 
-        //fazer o cambio
-        let exchange =
-          parseFloat(serviceExists.coin.value) *
-          parseFloat(customerExists.coin.value)
+        //check if exists
+        if (profitExchange) {
+          profit = parseFloat(profitExchange.profit)
+        }
 
-        priceService = exchange
+        //exchange currencies and margin profit
+        const valueService = serviceExists.coin.value
+        const valueCustomerCoin = customerExists.coin.value
+        let exchange = valueService * valueCustomerCoin
+        exchange += exchange * profit
+        // calculates the conversion value with the margin profit
+
+        //saves the exchange rate in the database
+        const newValueService = priceService * exchange
+        const newExchange = {
+          coin_from: serviceExists.coin.id,
+          coin_to: customerExists.coin.id,
+          customer_id: customerExists.id,
+          amount_from: priceService,
+          amount_total: newValueService,
+        }
+        await Exchange.create(newExchange)
+
+        //update price service with coin costumer
+        priceService = newValueService
       }
     }
 
     let total = 0
     total += priceService
 
-    // pegar a margem da agência
-    const profitAgent = parseFloat(agentExists.category.profit)
+    // load the margin profit of the agency on top of the agent
+    let profitAgent = 0
+    if (agentExists.category.profit) {
+      profitAgent = parseFloat(agentExists.category.profit)
+    }
+
     total += priceService * profitAgent
 
-    // pegar a margem Hotel Category
+    // load the margin profit of the agency on top of the Hotel Category
     const hotelCategoryProfit = await HotelCategoryProfit.findOne({
       where: {
         category_agent_id: agentExists.category_agent_id,
         hotel_id: serviceExists.hotel_id,
       },
     })
-    const profitHotelCategory = parseFloat(hotelCategoryProfit.profit)
+    let profitHotelCategory = 0
+    if (hotelCategoryProfit) {
+      profitHotelCategory = parseFloat(hotelCategoryProfit.profit)
+    }
+
     total += priceService * profitHotelCategory
 
-    //pegar a margem da moeda do cliente
-    const coinProfit = parseFloat(customerExists.coin.profit)
+    //load the margin profit of the coin of customer
+    let coinProfit = 0
+    if (customerExists.coin.profit) {
+      coinProfit = parseFloat(customerExists.coin.profit)
+    }
+
     total += priceService * coinProfit
 
-    //multiplica o resultado pela quantidade de dias
+    //multiplies the result by the number of days
     const diffDays = differenceInDays(parsedDateCheckout, parsedDateCheckin)
-    total *= Number(diffDays)
+    if (diffDays) {
+      total *= Number(diffDays)
+    }
 
-    //insere o valor calculado no objeto e salva no banco
+    //inserts the total value into the object and saves it in the database
     const offer = await Offer.create({ ...req.body, price: total })
 
     return res.json(offer)
+  }
+
+  /**
+   * this method only updates the payment status
+   */
+  async update(req, res) {
+    // #swagger.tags = ['Offer']
+    const id = req.params.id
+    const { paid } = req.body
+    try {
+      if (paid && id) {
+        const offerExists = await Offer.findByPk(id)
+        if (!offerExists) {
+          return res.status(400).json({ error: "Offer don't exist'" })
+        }
+        await Service.update(req.body, {
+          where: { id: id },
+        })
+        return res
+          .status(200)
+          .send(`item with id=${id} was updated successfully!`)
+      } else {
+        return res.status(500).send({ message: 'Error update paid offer' })
+      }
+    } catch (err) {
+      return res.status(500).send({ message: 'Error update item information' })
+    }
+  }
+
+  async destroy(req, res) {
+    // #swagger.tags = ['Offer']
+
+    const id = req.params.id
+
+    try {
+      const offerExists = await Offer.findByPk(id)
+      if (!offerExists) {
+        return res.status(400).json({ error: "Offer don't exist'" })
+      }
+
+      await Offer.destroy({
+        where: { id: id },
+      })
+
+      return res.status(204).send({
+        message: `item with id=${id} was deleted successfully!`,
+      })
+    } catch (err) {
+      return res.status(500).send({
+        message: `Could not delete item with id=${id}`,
+      })
+    }
   }
 }
 
